# M.A-Engine

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/corpora/example_a/: manifest.json  quotes.txt
data/corpora/example_m/: manifest.json  quotes.txt
data/personas/: a.json  m.json
docs/: CORPUS_FORMAT.md  DESIGN.md
notebooks/: transcript_stats.ipynb
scripts/: quick_session.sh
src/ma_engine/: __init__.py  _version.py
src/ma_engine/agents/: backbones.py  builder.py  persona_agent.py
src/ma_engine/cli/: __main__.py
src/ma_engine/corpus/: loader.py
src/ma_engine/logging/: setup.py  transcript_writer.py
src/ma_engine/runtime/: scheduler.py  seeds.py  session.py
tests/: conftest.py  test_corpus_loader.py  test_session.py  test_transcript_writer.py
