[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ma-engine"
version = "0.6.1"
description = "A sealed two-agent simulation framework for paired persona modeling"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Jon Vio" }]
requires-python = ">=3.11"
keywords = [
    "ai-agent",
    "multi-agent",
    "simulation",
    "persona",
    "language-model",
    "research",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/jondotvio/M.A-Engine"
Repository = "https://github.com/jondotvio/M.A-Engine"

[project.scripts]
ma-engine = "ma_engine.cli.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
